package com.GDI.GDInvestementos.execption;

public class InvestmentNotFoundException {
}
